5-likes/3-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: likes
spec:
  hosts:
    - likes
  http:
  - route:
    - destination:
        host: likes
        subset: v1
